# taxi_data_analytics_eng

./: .env  .gitignore  commands.txt  docker-compose.yml  dockerfile  ingest.py  main.py  notebook.ipynb  pyproject.toml
.dbt/: profiles.yml
taxi_data_ny/: dbt_project.yml
