[project]
name = "taxi-data-analytics-eng"
version = "0.1.0"
description = "A dbt powered project on analytics engineering of newyork taxi data, leveraging postgresdb as the data warehouse."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-postgres>=1.9.0",
    "dlt[duckdb]>=1.10.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "psycopg>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "rich>=14.0.0",
    "six>=1.17.0",
]
